# AIAutoEvals

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.agents/skills/cli-ux-designer/: SKILL.md
.github/workflows/: release.yml
.kilo/plans/: 1782504807784-verify-tenant-rag-fix.md  1782543646249-slm-rubric-generation.md  1782983771821-appointment-whatsapp-booking-eval.md  1783000147442-workflow-detection-pipeline.md  1783416150813-phases-2-3-4-integration.md  1783704748447-pypi-pipx-release-readiness.md  1783707242190-pypi-dist-name-dot-ai-evals.md  1783797493591-universal-task-detection-zero-effort-run.md  1783883621870-pypi-version-bump-0-1-1.md  1783884601993-pipeline-explained-doc.md  1783890531159-fix-slm-tool-name-mismatch.md  1783892676426-slm-dotted-task-key-fix.md  1783921880561-fix-dotted-task-constructor-faking.md  1784035702649-auto-seed-call-failures-fix.md  1784040138366-target-narrowing-dynamic-metrics-agents.md  1784056855057-trace-replay-node-scoring.md  1784400194729-demote-io-coupled-methods-fastapi-detector.md  New_idea.md  ai-eval-cli-and-system-design.md  fix-tenant-rag-misclassification.md  pgvector-detector.md
ai_eval/: __init__.py  __main__.py
ai_eval/bootstrap/: __init__.py  golden_writer.py  sitecustomize.py  tracer.py  wrappers.py
ai_eval/cli/: analyze.py  app.py  bootstrap.py  config_cmd.py  diff.py  doctor.py  history.py  init.py  judge.py  report.py  rubric_engine.py  run.py  stubs.py
ai_eval/cli/render/: json_out.py  tables.py  theme.py
ai_eval/config/: defaults.py  loader.py  schema.py
ai_eval/inference/: ast_scan.py  callgraph.py  hints.py  signatures.py  synthesize.py  task_selection.py  types.py
ai_eval/inference/detectors/: _langchain_retrieval.py  base.py  chromadb.py  fastapi.py  langchain.py  langgraph.py  openai_chat.py  openai_responses.py  openai_tools.py  pgvector.py  web.py
ai_eval/inference/prompts/: classify_task.txt  empty_recover.txt  few_shot.yaml
ai_eval/inference/slm/: __init__.py  builder.py  cache.py  client.py  evidence.py  prompts.py  validation.py
ai_eval/insights/: __init__.py  diff.py  history.py  root_cause.py
ai_eval/judge/: __init__.py  cache.py  gateway.py  instructor_glue.py  schemas.py  tiering.py
ai_eval/judge/prompts/: __init__.py  checklist_basic.py  cot_complex.py
ai_eval/metrics/: __init__.py  judge_builtin.py  local.py  registry.py
ai_eval/runner/: __init__.py  engine.py  git.py  record.py  thresholds.py
ai_eval/runner/metrics/: __init__.py  latency.py
ai_eval/scaffold/: gitignore_patch.py  golden_writer.py  harness_writer.py  hints_writer.py  rubrics_writer.py  seeder.py  tests_writer.py
ai_eval/scaffold/templates/: tests_py.tmpl
ai_eval/storage/: locks.py  paths.py  runs.py
ai_eval/telemetry/: logger.py  progress.py
docs/: RELEASING.md  how-it-works.html  metrics.md  pipeline-explained.md
tests/: conftest.py  test_appointment_workflow_fixture.py  test_bootstrap_golden_writer.py  test_bootstrap_tracer.py  test_bootstrap_wrappers.py  test_callgraph.py  test_cli_bootstrap.py  test_cli_diff_report_history.py  test_cli_help.py  test_cli_init.py  test_cli_judge.py  test_cli_misc.py  test_cli_run.py  test_detectors.py  test_e2e.py  test_fastapi_detector.py  test_golden_writer.py  test_harness_writer.py  test_hints_merge.py  test_insights_diff.py  test_insights_history.py  test_insights_root_cause.py  test_integration_basic_rag.py  test_judge_cache.py  test_judge_gateway.py  test_judge_metrics.py  test_judge_tiering.py  test_langgraph_detector.py  test_local_metrics.py  test_metric_registry.py  test_openai_responses_detector.py  test_runner_dotted_entry.py  test_runner_engine.py  test_runner_metrics.py  test_runner_thresholds.py  test_seeder.py  test_signatures.py  test_sitecustomize_wrap.py  test_slm_builder.py  test_synthesize_workflow_metrics.py  (+2 more)
