[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ai-eval"
version = "0.1.0"
description = "Zero-config, repo-aware AI evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ai-eval contributors" }]
keywords = ["llm", "evaluation", "evals", "ai", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "anyio>=4.3",
]

[project.optional-dependencies]
judge = [
  "litellm>=1.40",
  "instructor>=1.3",
  "httpx>=0.27",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "syrupy>=4.6",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
ai-eval = "ai_eval.cli.app:main"

# Note: the `ai_eval.detectors` and `ai_eval.metrics` entry-point groups are
# reserved for third-party plugins. Built-ins are loaded directly by
# `ai_eval.inference.ast_scan.builtin_detectors()` and the Phase 4 metrics
# registry (not shipped in v0.1). Registering built-ins under these groups
# would cause duplicate detection / metric runs.

[tool.hatch.build.targets.wheel]
packages = ["ai_eval"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
