[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ai-evals"
version = "0.1.0"
description = "Zero-config, repo-aware AI evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ai-evals contributors" }]
keywords = ["llm", "evaluation", "evals", "ai", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "anyio>=4.3",
  "litellm>=1.40",
  "instructor>=1.3",
  "httpx>=0.27",
]

# `judge` is kept as a compatibility shim (now empty: its deps moved to core).
# The SLM rubric engine (default `hybrid`) requires litellm/instructor at
# import time of `ai_eval.inference.slm.client`; use `--rubric-engine rules` to
# stay on the rule-only path.
[project.optional-dependencies]
judge = []
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.3",
  "syrupy>=4.6",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
ai-evals = "ai_eval.cli.app:main"

# Note: the `ai_eval.detectors` and `ai_eval.metrics` entry-point groups are
# reserved for third-party plugins. Built-in detectors are loaded directly by
# `ai_eval.inference.ast_scan.builtin_detectors()`; built-in metrics are
# registered in `ai_eval.metrics.registry.BUILTIN_METRICS`. Registering
# built-ins under these groups would cause duplicate detection / metric runs.
#
# Third parties extend the metric set by exposing a callable returning a
# `ai_eval.metrics.registry.Metric` (or a compatible dataclass) under:
#
#   [project.entry-points."ai_eval.metrics"]
#   my_metric = "my_pkg.metrics:my_metric"
#
# The loader mirrors `load_entrypoint_detectors` in ast_scan.py.

[tool.hatch.build.targets.wheel]
packages = ["ai_eval"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".kilo",
  ".venv",
  "venv",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
  "dist",
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# B008: typer.Option/Argument in defaults is the required typer pattern.
# E402: app.py imports command modules after app creation (intentional, avoids
# circular imports). RUF015/RUF059: stylistic; not enforced on pre-existing code.
ignore = ["B008", "E402", "RUF015", "RUF059"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
timeout = 60
